# portfolio

./: .gitignore  README.md  portfolio.csv  portfolio.ipynb  portfolio.py  pyproject.toml
