[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Mustafa Caylak"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
pandas-datareader = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
jupyter = ["jupyter"]
